# amd-fftw

./: CMakeLists.txt  COPYRIGHT  NEWS  README.md  README_AMD.md  aclocal.m4  cmake.config.h.in  config.guess  config.h.in  config.sub  configure  configure.ac  ltmain.sh
api/: api.h  apiplan.c  configure.c  f77api.c  fftw3.h  plan-many-dft.c  the-planner.c  version.c
dft/: bluestein.c  conf.c  dft.h  dftw-direct.c  dftw-generic.c  generic.c  problem.c  rader.c
dft/scalar/codelets/: n1_10.c  n1_11.c  n1_12.c  n1_13.c  n1_14.c  n1_15.c  n1_16.c  n1_2.c  n1_20.c  n1_25.c  n1_3.c  n1_32.c  n1_4.c  n1_5.c  n1_6.c  n1_64.c  n1_7.c  n1_8.c  n1_9.c  q1_2.c  q1_3.c  q1_4.c  q1_5.c  q1_6.c  q1_8.c  t1_10.c  t1_12.c  t1_15.c  t1_16.c  t1_2.c  t1_20.c  t1_25.c  t1_3.c  t1_32.c  t1_4.c  t1_5.c  t1_6.c  t1_64.c  t1_7.c  t1_8.c  (+10 more)
dft/simd/: codlist.mk
dft/simd/avx/: Makefile.am  Makefile.in  n1fv_256.c  n1fv_512.c  n2fv_128.c  n2fv_256.c  n2fv_512.c  q1fv_10.c  q1fv_12.c  q1fv_16.c  q1fv_20.c  q1fv_32.c  t1fv_128.c  t1fv_256.c  t2fv_128.c  t2fv_256.c  t3fv_128.c  t3fv_64.c
dft/simd/avx2/: Makefile.in  n1fv_256.c  n1fv_512.c  n2fv_128.c  n2fv_256.c  n2fv_512.c  q1fv_10.c  q1fv_12.c  q1fv_16.c  q1fv_20.c  q1fv_32.c  t1fv_128.c  t1fv_256.c  t2fv_128.c  t2fv_256.c  t3fv_128.c  t3fv_64.c
dft/simd/avx2-128/: Makefile.in  n1fv_256.c  n1fv_512.c  n2fv_128.c  n2fv_256.c  n2fv_512.c  q1fv_10.c  q1fv_12.c  q1fv_16.c  q1fv_20.c  q1fv_32.c  t1fv_128.c  t1fv_256.c  t2fv_128.c  t2fv_256.c  t3fv_128.c  t3fv_64.c
dft/simd/avx512/: Makefile.in  n1fv_256.c  n1fv_512.c  n2fv_128.c  n2fv_256.c  n2fv_512.c  q1fv_10.c  q1fv_12.c  q1fv_16.c  q1fv_20.c  q1fv_32.c  t1fv_128.c  t1fv_256.c  t2fv_128.c  t2fv_256.c  t3fv_128.c  t3fv_64.c
dft/simd/common/: Makefile.in  codlist.c  n1bv_10.c  n1bv_11.c  n1bv_12.c  n1bv_128.c  n1bv_13.c  n1bv_14.c  n1bv_15.c  n1bv_16.c  n1bv_2.c  n1bv_20.c  n1bv_25.c  n1bv_3.c  n1bv_32.c  n1bv_4.c  n1bv_5.c  n1bv_6.c  n1bv_64.c  n1bv_7.c  n1bv_8.c  n1bv_9.c  n1fv_10.c  n1fv_11.c  n1fv_12.c  n1fv_128.c  n1fv_13.c  n1fv_14.c  n1fv_15.c  n1fv_16.c  n1fv_2.c  n1fv_20.c  n1fv_25.c  n1fv_256.c  n1fv_3.c  n1fv_32.c  n1fv_4.c  n1fv_5.c  n1fv_512.c  n1fv_6.c  (+148 more)
dft/simd/sse2/: Makefile.in  n1fv_256.c  n1fv_512.c  n2fv_128.c  n2fv_256.c  n2fv_512.c  q1fv_10.c  q1fv_12.c  q1fv_16.c  q1fv_20.c  q1fv_32.c  t1fv_128.c  t1fv_256.c  t2fv_128.c  t2fv_256.c  t3fv_128.c  t3fv_64.c
doc/: fftw3.info-1  license.texi  rfftwnd.eps  texinfo.tex
genfft/: annotate.ml
kernel/: cpy1d.c  cpy2d-pair.c  cpy2d.c  ifftw.h  planner.c  stride.c  tensor7.c  tile2d.c  transpose.c
libbench2/: aset.c  bench-main.c  bench-user.h  bench.h  caset.c  mp.c  speed.c  tensor.c  util.c  verify-lib.c  verify-r2r.c
m4/: libtool.m4
mpi/: Makefile.am  Makefile.in  api.c  conf.c  dft-rank-geq2-transposed.c  mpi-bench.c  mpi-transpose.h  rdft-problem.c  rdft-serial.c  transpose-blk-scheme1.c  transpose-pairwise-omc.c  transpose-pairwise.c
rdft/: dft-r2hc.c  dht-r2hc.c  dht-rader.c  hc2hc-generic.c  problem.c  problem2.c  rdft-dht.c  rdft2-rdft.c  vrank3-transpose.c
rdft/scalar/r2cb/: hb2_16.c  hb2_20.c  hb2_25.c  hb2_32.c  hb2_4.c  hb2_5.c  hb2_8.c  hb_10.c  hb_12.c  hb_15.c  hb_16.c  hb_2.c  hb_20.c  hb_25.c  hb_3.c  hb_32.c  hb_4.c  hb_5.c  hb_6.c  hb_64.c  hb_7.c  hb_8.c  hb_9.c  hc2cb2_16.c  hc2cb2_20.c  hc2cb2_32.c  hc2cb2_4.c  hc2cb2_8.c  hc2cb_10.c  hc2cb_12.c  hc2cb_16.c  hc2cb_2.c  hc2cb_20.c  hc2cb_32.c  hc2cb_4.c  hc2cb_6.c  hc2cb_8.c  hc2cbdft2_16.c  hc2cbdft2_20.c  hc2cbdft2_32.c  (+47 more)
rdft/scalar/r2cf/: hc2cf2_16.c  hc2cf2_20.c  hc2cf2_32.c  hc2cf2_4.c  hc2cf2_8.c  hc2cf_10.c  hc2cf_12.c  hc2cf_16.c  hc2cf_2.c  hc2cf_20.c  hc2cf_32.c  hc2cf_4.c  hc2cf_6.c  hc2cf_8.c  hc2cfdft2_16.c  hc2cfdft2_20.c  hc2cfdft2_32.c  hc2cfdft2_4.c  hc2cfdft2_8.c  hc2cfdft_10.c  hc2cfdft_12.c  hc2cfdft_16.c  hc2cfdft_2.c  hc2cfdft_20.c  hc2cfdft_32.c  hc2cfdft_4.c  hc2cfdft_6.c  hc2cfdft_8.c  hf2_16.c  hf2_20.c  hf2_25.c  hf2_32.c  hf2_4.c  hf2_5.c  hf2_8.c  hf_10.c  hf_12.c  hf_15.c  hf_16.c  hf_2.c  (+47 more)
rdft/scalar/r2r/: e01_8.c  e10_8.c
rdft/simd/avx/: Makefile.am  Makefile.in
rdft/simd/common/: hc2cbdftv_10.c  hc2cbdftv_12.c  hc2cbdftv_16.c  hc2cbdftv_2.c  hc2cbdftv_20.c  hc2cbdftv_32.c  hc2cbdftv_4.c  hc2cbdftv_6.c  hc2cbdftv_8.c  hc2cfdftv_10.c  hc2cfdftv_12.c  hc2cfdftv_16.c  hc2cfdftv_2.c  hc2cfdftv_20.c  hc2cfdftv_32.c  hc2cfdftv_4.c  hc2cfdftv_6.c  hc2cfdftv_8.c
reodft/: redft00e-r2hc-pad.c  reodft00e-splitradix.c  reodft010e-r2hc.c  reodft11e-r2hc-odd.c  rodft00e-r2hc-pad.c
simd-support/: amd64-cpuid.h  avx.c  simd-avx.h  simd-avx2.h  sse2.c
tests/: bench.c  check.pl  fftw-bench.c
threads/: api.c  openmp.c  threads.c  threads.h
win/tests/: README.txt  check.pl  commands.yaml  fftw_check.py  fftw_mpi_benchmark.bat  fftw_mt_benchmark.bat  fftw_st_benchmark.bat
